adding home page

--- a/css/nav.css
+++ b/css/nav.css
@@ -2,8 +2,8 @@
   background-color: #EDEDE8;
 }
 .nav--primary {
-  font-size: 20px;
-  color: #203128;
+  font-size: 25px;
+  color: #283E32;
 }
 .nav--primary:hover {
   color: #046243;
