--- a/scss/feature.scss
+++ b/scss/feature.scss
@@ -1,7 +1,6 @@
 @use 'palette';
 
 .feature {
-  background-color: palette.$background-2;
   padding-top: 100px;
   text-align: center;
 
@@ -28,6 +27,7 @@
   }
 
   &__grid {
-    // border: 1px solid black;
+    margin-left: 10%;
+    margin-right: 10%;
   }
 }
