--- a/scss/product.scss
+++ b/scss/product.scss
@@ -19,3 +19,14 @@
     margin-right: 10%;
   }
 }
+
+.amount {
+  display:inline-block;
+  border: 1px solid black;
+  padding: 0px;
+
+  p {
+    display:inline-block;
+    margin: 0px;
+  }
+}
